added missing css class

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <p class="question">How do I play?</p>
         <p class="answer">In order to play, press/touch the buttons or use the number keys and letter keys to control the keyboard.</p>
         <p class="question">What do the colors of the keys mean, why do they change when I change the octave division?</p>
-        <p>Octaves of the base frequency are shown in orange. Notes of the 12-div chromatic scale (or very close to it) are shown in white. The rest (in grey) are "microtonal" with respect to the base frequency.</p>
+        <p class="answer">Octaves of the base frequency are shown in orange. Notes of the 12-div chromatic scale (or very close to it) are shown in white. The rest (in grey) are "microtonal" with respect to the base frequency.</p>
         <p class="question">Which browsers are compatible?</p>
         <p class="answer">At least recent versions of Firefox, Chrome and Safari. Try those first and then see if your more exotic browsers work the same.</p>
         <p class="question">Will it work on my tablet/phone?</p>
